Fixed overflowing

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
         height: 80vh;
         width: 100%;
         padding: 16px;
+        overflow: hidden;
         &.dark__bg {
             background-color: var(--darkbg);
             color: var(--lightfont);
